# testbot

./: Dockerfile  README.md  pyproject.toml
src/: df_responses.py  logs.py  main.py  py_models.py  telegram_responses.py
